core/unpackaged/main/default/objects/Account/fields/Account_City_State__c.field-meta.xml
<CustomField>
    <fullName>Account_City_State__c</fullName>
    <formula>Name &amp; " - " &amp; BillingCity &amp; ", " &amp; BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account+City+State</label>
    <type>Text</type>
</CustomField>