core/unpackaged/main/default/objects/Account/fields/companyNumber__c.field-meta.xml
<CustomField>
    <fullName>companyNumber__c</fullName>
    <label>Company Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>