core/unpackaged/main/default/objects/Account/fields/Complex_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Complex_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies iif an account has complex pricing.  Complex pricing means levels are deviated from standard daily multipliers.</description>
    <inlineHelpText>Check the box if the account has pricing levels  that are deviated from standard daily multipliers.</inlineHelpText>
    <label>Complex Pricing</label>
    <type>Checkbox</type>
</CustomField>