core/unpackaged/main/default/objects/Account/fields/Conveyor_Cover_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Conveyor_Cover_Multiplier__c</fullName>
    <description>Conveyor Cover part class price multiplier value</description>
    <inlineHelpText>Conveyor Cover part class price multiplier value</inlineHelpText>
    <label>Conveyor Cover Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>