core/unpackaged/main/default/objects/Account/fields/Craft_Lag_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Craft_Lag_Multiplier__c</fullName>
    <description>Craft Lag part class price multiplier value</description>
    <inlineHelpText>Craft Lag part class price multiplier value</inlineHelpText>
    <label>Loose Craft Lag Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>