core/unpackaged/main/default/objects/Account/fields/creditLimit__c.field-meta.xml
<CustomField>
    <fullName>creditLimit__c</fullName>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>