core/unpackaged/main/default/objects/Account/fields/Customer_No_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Customer_No_Suffix__c</fullName>
    <formula>RIGHT(External_ID_No_Comma__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer No Suffix</label>
    <type>Text</type>
</CustomField>