core/unpackaged/main/default/objects/Account/fields/CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>CustomerClass__c</fullName>
    <label>Customer Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>