core/unpackaged/main/default/objects/Account/fields/Drum_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Drum_Multiplier__c</fullName>
    <description>Drum part class price multiplier value</description>
    <inlineHelpText>Drum part class price multiplier value</inlineHelpText>
    <label>Drum Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>