core/unpackaged/main/default/objects/Account/fields/E_Bearing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>E_Bearing_Multiplier__c</fullName>
    <description>E Bearing part class price multiplier value</description>
    <inlineHelpText>E Bearing part class price multiplier value</inlineHelpText>
    <label>E Bearing Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>