core/unpackaged/main/default/objects/Account/fields/Enable_Customer_Part_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Enable_Customer_Part_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account-level toggle controlling visibility of the Customer Part Number feature in the B2B portal. When false, all related UI (My Part Numbers page, storefront displays, search translation) is hidden for users of this account. Requested by PPI (Ian Moore) to control feature rollout per customer.</description>
    <label>Enable Customer Part Numbers</label>
    <type>Checkbox</type>
</CustomField>