core/unpackaged/main/default/objects/Account/fields/ESCMMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ESCMMultiplier__c</fullName>
    <label>E/SCM Multiplier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>