core/unpackaged/main/default/objects/Account/fields/External_ID_No_Comma__c.field-meta.xml
<CustomField>
    <fullName>External_ID_No_Comma__c</fullName>
    <description>CHANGE EXTERNAL ID TO TEXT FORMAT TO REMOVE COMMA</description>
    <formula>IF(ISBLANK(externalId__c), "", LEFT( TEXT( externalId__c ),LEN(TEXT( externalId__c ))-2) &amp;"-"&amp;RIGHT(TEXT( externalId__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer No</label>
    <type>Text</type>
</CustomField>