core/unpackaged/main/default/objects/Account/fields/Fixed_Pricing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing_Multiplier__c</fullName>
    <description>This multiplier is used for any product that has a fixed price and multiplier for EVERY customer.  Example: Roll Guards</description>
    <inlineHelpText>Multiplier for fixed price items.</inlineHelpText>
    <label>Fixed Pricing Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>