core/unpackaged/main/default/objects/Account/fields/Freight_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Freight_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Agreement</label>
    <type>Checkbox</type>
</CustomField>