core/unpackaged/main/default/objects/Account/fields/Idler_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Idler_Multiplier__c</fullName>
    <description>Idler part class price multiplier value</description>
    <inlineHelpText>Idler part class price multiplier value</inlineHelpText>
    <label>Idler Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>