core/unpackaged/main/default/objects/Account/fields/Indirect_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Customer_No__c</fullName>
    <inlineHelpText>Indirect Customer Code number associated with Account. Created when pricing is programmed</inlineHelpText>
    <label>Indirect Customer No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>