core/unpackaged/main/default/objects/Account/fields/Is_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Is_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Suspended</label>
    <type>Checkbox</type>
</CustomField>