core/unpackaged/main/default/objects/Account/fields/MD_Drum_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>MD_Drum_Multiplier__c</fullName>
    <description>MD Drum part class price multiplier value</description>
    <inlineHelpText>MD Drum part class price multiplier value</inlineHelpText>
    <label>MD Drum Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>