core/unpackaged/main/default/objects/Account/fields/MD_Wing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>MD_Wing_Multiplier__c</fullName>
    <description>MD Wing part class price multiplier value</description>
    <inlineHelpText>MD Wing part class price multiplier value</inlineHelpText>
    <label>MD Wing Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>