core/unpackaged/main/default/objects/Account/fields/PulleyMultiplier__c.field-meta.xml
<CustomField>
    <fullName>PulleyMultiplier__c</fullName>
    <inlineHelpText>Pulley part class price multiplier value</inlineHelpText>
    <label>Pulley Multiplier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>