core/unpackaged/main/default/objects/Account/fields/SAF_Bearing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>SAF_Bearing_Multiplier__c</fullName>
    <description>SAF Bearing part class price multiplier value</description>
    <inlineHelpText>SAF Bearing part class price multiplier value</inlineHelpText>
    <label>SAF Bearing Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>