core/unpackaged/main/default/objects/Account/fields/Sales_Operations_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations_Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes if an account is designated as a Sales Operations Key Account.  They are typically assigned to Territory 07 or 23.</description>
    <inlineHelpText>Check this box if the account is a Sales Ops Key Account.</inlineHelpText>
    <label>Sales Operations Key Account</label>
    <type>Checkbox</type>
</CustomField>