core/unpackaged/main/default/objects/Account/fields/salesman__c.field-meta.xml
<CustomField>
    <fullName>salesman__c</fullName>
    <label>Salesman</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>