core/unpackaged/main/default/objects/Account/fields/Salesman_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Email__c</fullName>
    <label>Salesman Email</label>
    <type>Email</type>
</CustomField>