core/unpackaged/main/default/objects/Account/fields/Salesman_Text__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Text__c</fullName>
    <label>Salesman (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>