core/unpackaged/main/default/objects/Account/fields/Shaft_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Shaft_Multiplier__c</fullName>
    <description>Shaft part class price multiplier value</description>
    <inlineHelpText>Shaft part class price multiplier value</inlineHelpText>
    <label>Shaft Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>