core/unpackaged/main/default/objects/Account/fields/Speed_Switch_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Speed_Switch_Multiplier__c</fullName>
    <description>Speed Switch part class price multiplier value</description>
    <inlineHelpText>Speed Switch part class price multiplier value</inlineHelpText>
    <label>Speed Switch Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>