core/unpackaged/main/default/objects/Account/fields/Take_up_Frame_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Take_up_Frame_Multiplier__c</fullName>
    <description>Take-up Frame part class price multiplier value</description>
    <inlineHelpText>Take-up Frame part class price multiplier value</inlineHelpText>
    <label>Take-up Frame Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>