core/unpackaged/main/default/objects/Account/fields/terms__c.field-meta.xml
<CustomField>
    <fullName>terms__c</fullName>
    <label>Sales terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>