core/unpackaged/main/default/objects/Account/fields/territory__c.field-meta.xml
<CustomField>
    <fullName>territory__c</fullName>
    <label>Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>