core/unpackaged/main/default/objects/Account/fields/Territory_Text__c.field-meta.xml
<CustomField>
    <fullName>Territory_Text__c</fullName>
    <label>Territory (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>