core/unpackaged/main/default/objects/Account/fields/Tube_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Tube_Multiplier__c</fullName>
    <description>Tube part class price multiplier value</description>
    <inlineHelpText>Tube part class price multiplier value</inlineHelpText>
    <label>Tube Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>