core/unpackaged/main/default/objects/Account/fields/UH_Tube_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>UH_Tube_Multiplier__c</fullName>
    <description>UH Tube part class price multiplier value</description>
    <inlineHelpText>UH Tube part class price multiplier value</inlineHelpText>
    <label>UH Tube Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>