core/unpackaged/main/default/objects/Account/fields/Vulcanized_Lagging_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Vulcanized_Lagging_Multiplier__c</fullName>
    <description>Vulcanized Lagging part class price multiplier value</description>
    <inlineHelpText>Vulcanized Lagging part class price multiplier value</inlineHelpText>
    <label>Vulcanized Lagging Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>