core/unpackaged/main/default/objects/Account/fields/Wing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Wing_Multiplier__c</fullName>
    <description>Wing part class price multiplier value</description>
    <inlineHelpText>Wing part class price multiplier value</inlineHelpText>
    <label>Wing Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>