core/unpackaged/main/default/objects/Account/fields/Z_CEMA_D_TE_TESA_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Z_CEMA_D_TE_TESA_Multiplier__c</fullName>
    <label>Z CEMA D TE TESA Multiplier</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>