core/unpackaged/main/default/objects/Account/fields/Z_HBW_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Z_HBW_Multiplier__c</fullName>
    <label>Z HBW Multiplier</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>