core/unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>External_ID_No_Comma__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>companyNumber__c</columns>
    <columns>Is_Suspended__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>